ui/src/js/profile/edit/editUserDetails.less
@import '../../../less/basecolors.less';

.editUserDetails {
  font-size: 12px;
  margin-bottom: 25px;

  h2 {
    margin-bottom: 15px;
  }

  img {
    float: left;
    margin-right: 20px;
  }

  .name {
    text-transform: uppercase;
    font-weight: bold;
  }

  .summary {
    padding-top: 5px;
  }
}

.hiddenInput {
  visibility: hidden;
  width: 1px;
  height: 1px;
}

.upload {
  span:nth-child(1) {
    font-size: 18px;
  }

  span:nth-child(2) {
    vertical-align: text-bottom;
  }
}

.noUpload {
  color: #D8D8D8;

  span:nth-child(1) {
    font-size: 18px;
    margin-left: 5px;
    margin-right: 5px;
  }

  span:nth-child(2) {
    vertical-align: text-bottom;
  }
}

.editItem {
  border-width: 1px;
  border-style: solid none none none;
  height: 30px;
  padding-top: 5px;
  margin-bottom: 5px;

  input {
    border: none;
    background-color: @base-background-color;
    width: 230px;
  }

  input:focus {
    border-color: #000;
  }

  .passwordFields {
    display: inline-block;

    input {
      border: solid;
      border-width: 1px;
    }

    input:nth-child(1) {
      margin-right: 5px;
    }
  }

}

.file-choser {
  margin-bottom: 5px;

  .file-choser-form {
    text-align: right;

    .fileContainer {
      overflow: hidden;
      position: relative;
      min-width: 90px;

      background: @primary-color;
      color: #fff;
      border-radius: 3px;
      font-weight: 400;
      padding: 3px;

      span {
        margin-right: 5px;
      }
    }

    .fileContainer [type=file] {
      min-height: 100%;
      min-width: 100%;
      opacity: 0;
      position: absolute;
      right: 0;
      text-align: right;
      top: 0;
      cursor: pointer;
    }

    .iconButton{
      min-width: 90px;
    }
  }

}

